Changes for 0.5.2

* Added better unix shell scripts for TripleA, thanks DMan for the scripts (George_H)

* Added root folder path fix by Thomas Matthijs for Gentoo friendliness and extra changes for how triplea see file paths (George_H)

* Now all map utils have proper "save as" dialogs (George_H)

* Added new class to prompt user to select a directory so map utils won't save files to a hardcoded dir (George_H)

* Define player colour in map.properties to allow easy modification and adding new players (sgb)

* Added option to limit ipcs lost in a territory during one round. This is necessary to implement LHTR ruleset.

* Fixed bug in Irony PBEM random source: It did not use the max parameter passed to the random methods. This fixes the 4th edition AA casualty selection problem in PBEM. (Ali Ibrahim)

* Added new technology activation delegate to allow control of when technologies actually take effect. This is used to allow delay of technology activation in LHTR. (Ali Ibrahim)

* Changed mouse behavior such that only the left button is used to select a territory to put units in. (Ali Ibrahim)

* Added more options for unit size using submenu. (Ali Ibrahim)

* Changed ordering of properties in the launcher properties tab to use ordering in game XML file. (Ali Ibrahim)

* Added Map Skins code to allow multiple (1 and greater) map skins to be used for each game based on a directory search pattern. Skins must be in maps folder with game name as prefix (ie. revisedMySkin). (Beagle)

* Changed how bombardment works. Now users pick where to bombard before any battles are resolved. This allows users not to bombard with a unit (for example if they wish to move it during non-combat) by picking "None". This also fixes the bug where a a unit could retreat from a battle and bombard in the same turn. It also allows user to divide their bombardment shots however they like when there are multiple bombardment targets. (Ali Ibrahim)
