@@ -1,5 +1,7 @@
 Changes for 0.5.2
 
+* Changes to make TripleA compile under Sun JDK 1.5.x (George_H)
+
 * Added better unix shell scripts for TripleA, thanks DMan for the scripts (George_H)
 
 * Added root folder path fix by Thomas Matthijs for Gentoo friendliness and extra changes for how triplea see file paths (George_H)
